Prevent wrapping of btuBadge post text

--- a/client/components/btuBadge/btuBadge.scss
+++ b/client/components/btuBadge/btuBadge.scss
@@ -43,6 +43,7 @@
     }
     &.post {
       bottom: -40px;
+      white-space: nowrap;
     }
   }
 }
